# kdt-ai-2-hands-on-experience

./: .claudeignore  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .trivyignore.yaml  AGENTS.md  CLAUDE.md  README.md  docker-compose.dev.yml  docker-compose.ec2.yml  docker-compose.prod.yml  docker-compose.yml  environment.yml  pr-push-test.txt  pull_request_template.md  pyproject.toml  test  test.md
agent/: AGENTS.md  Dockerfile  README.md  pyproject.toml
agent/contracts/: workflow-contracts.json
agent/docs/: README.md  agent-backend-integration-contract.md  agent-demo-scenario.md  agent-integration.md  agent-management-sheet-v3.xlsx  agent-sheet-v2-review.md  agent-team-integration-implementation-roadmap.md  agent-tools-api-spec.md  agent-ui-hitl-contract.md  agent-ui-payload-contract-change-guide.md  agent-workflow-development-guide.md  agent-workflow-parallel-development-plan.md  guardrail-devsecops-handoff.md  legacy-agent-cross-team-handoff.md  naming-convention.md  qa-bugfix-changelog-2026-07-22.md  qa-workflow-e2e-test-report.md  sheet-cleanup-guide.md  tool-api-integration.md
agent/notebooks/: 01_agent_walkthrough.ipynb  01_balance_inquiry.ipynb  02_multiturn.ipynb  03_external_transfer.ipynb
agent/notebooks/testbed/: 01_balance_inquiry_testbed.ipynb  02_internal_transfer_testbed.ipynb  03_external_transfer_testbed.ipynb  04_account_list_testbed.ipynb  04_set_default_account_testbed.ipynb  05_set_account_alias_testbed.ipynb  05_transaction_history_testbed.ipynb  06_period_amount_summary_testbed.ipynb  README.md
agent/scripts/: auto_workflow_path_check.py  build_agent_management_sheet_v3.py  export_workflow_contracts.py  sync_config_from_sheets.py
agent/scripts/workflow_path_check/: __init__.py  _shared.py  account_alias.py  account_list.py  balance_inquiry.py  default_account.py  external_transfer.py  global_entry.py  internal_transfer.py  period_amount_summary.py  transaction_history.py
agent/src/agent/: application_runtime.py  bank_client.py  graph.py  internal_execution_api.py  llm.py  main.py  nodes.py  paths.py  schemas.py  service.py  state.py  subgraph_builder.py  workflow_contracts.py  workflow_loader.py  workflow_matcher.py
agent/tests/: conftest.py  test_account_alias_tools.py  test_account_list_reference_workflow.py  test_account_list_tools.py  test_agent_chat_api.py  test_application_runtime.py  test_backend_integration_foundation.py  test_balance_reference_workflow.py  test_balance_tools.py  test_bank_client.py  test_chat_api.py  test_config_sanity.py  test_contract_tool_registry.py  test_execution_failure_reporting.py  test_execution_runtime.py  test_external_transfer_reference_workflow.py  test_graph_build.py  test_guardrail_engine.py  test_intent_gate.py  test_interaction_pause_runtime.py  test_internal_execution_api.py  test_internal_transfer_flow.py  test_internal_transfer_reference_workflow.py  test_internal_transfer_tools.py  test_llm_provider.py  test_period_amount_summary_reference_workflow.py  test_query_slot_extraction.py  test_read_backend_agent_tools.py  test_resume_state_mapper.py  test_resume_validation_runtime.py  test_set_account_alias_reference_workflow.py  test_set_default_account_reference_workflow.py  test_setting_backend_agent_tools.py  test_setting_slot_extraction.py  test_setting_tools.py  test_slot_extraction_support.py  test_state.py  test_subgraph_builder.py  test_sync_config_from_sheets.py  test_transaction_history_reference_workflow.py  (+11 more)
backend/: Dockerfile  README.md  pyproject.toml
backend/docs/: agent-integration-interface.md  agent_ui_event_spec.md
backend/migrations/: README.md  env.py
backend/migrations/versions/: 21c9fb07e81e_create_first_table.py  2ea0ff81f9c5_create_recipient_candidates.py  317ff87f3f12_create_pending_inputs.py  7d80f635a816_create_confirmation_idempotency_.py  8dd361bcc2ad_add_new_column_to_account_table.py  a1b2c3d4e5f6_create_execution_contexts.py  a9373beee237_create_auth_contexts.py  b2c3d4e5f6a7_add_agent_tool_columns_to_accounts.py  c1d2e3f4a5b6_add_bank_name_to_account.py  dbe684a809de_create_transaction_query_contexts.py  edf3288029e1_create_first_table.py  (+1 more)
backend/scripts/: mock_agent_producer.py  seed_qa_personas.py  unset_default_account.py
backend/src/backend/: __init__.py  (+1 more)
backend/tests/: conftest.py  test_agent_api.py  test_agent_response.py  test_agent_tools_external_transfer.py  test_agent_tools_recipients.py  test_agent_tools_settings.py  test_agent_tools_transfers.py  test_chat_api.py  test_exceptions_response.py  test_execution_context_service.py  test_financial_audit_service.py  test_financial_client.py  test_masking.py  test_provisioning.py  test_sse_api.py  test_transfer_service.py  test_ui_api.py  test_ui_enrich.py
e2e/: README.md  pyproject.toml
e2e/tests/: conftest.py  test_login_balance_transfer.py
mock-financial-service/: .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  financial.db-shm.bak-prekdtremoval  financial.db-shm.bak-preteammate  financial.db-wal.bak-prekdtremoval  financial.db-wal.bak-preteammate  financial.db.bak-branch-mismatch  financial.db.bak-prekdtremoval-20260723154357  financial.db.bak-preteammate-20260723152505  models.py  pyproject.toml
mock-financial-service/alembic_migrations/: env.py
mock-financial-service/docs/: ERD.md  README.md  api-reference.md  ledger-schema.md  todo-account-system-resolution.md
mock-financial-service/scripts/: run_daily_close.py  seed_dev_db.py
mock-financial-service/tests/: conftest.py  test_analytics_api.py  test_api.py  test_audit_log.py  test_audit_logs_api.py  test_canonical_dataset.py  test_card_product_specs.py  test_cards.py  test_crosspath_equality.py  test_daily_closing.py  test_demo_fixture_db_load.py  test_demo_fixtures.py  test_fixture_adapter_smoke.py  test_infobank_view.py  test_ledger_integrity.py  test_merchant_category.py  test_mock_accounts_cards.py  test_mock_card_products.py  test_multi_bank.py  test_risk_signals.py  test_seed_dev_db.py  test_smoke.py  test_snapshot.py  test_todo_resolution_apis.py  test_transactions.py  test_transfers.py
(+589 files in other folders)
