[project]
name = "kdt-ai-2-hands-on-experience"
version = "0.1.0"
description = "AI Financial Copilot Sandbox monorepo"
requires-python = ">=3.11,<3.12"
dependencies = [
    "agent",
    "backend",
    "financial-service",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "agent",
    "backend",
    "mock-financial-service",
]

[tool.uv.sources]
agent = { workspace = true }
backend = { workspace = true }
financial-service = { workspace = true }

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "ipykernel>=7.3.0",
    "pre-commit>=4.0.0",
    "pyright>=1.1.411",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.8.0",
]

# deptry 관해선 아래 참조하세요. deptry . 명령어도 써보는 거 추천드립니다.
# https://deptry.com/rules-violations/#standard-library-dependencies-dep005

[tool.ruff]
src = [".", "backend", "agent"]
line-length = 88
target-version = "py311"
# 노트북은 티칭용이라 lint/format 대상에서 제외 (ruff는 기본으로 ipynb 포함)
# Alembic auto-generates these — don't hand-format/lint machine-generated
# migration scripts (autogenerate's own formatting conventions apply there).
extend-exclude = ["*.ipynb", "mock-financial-service/alembic_migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "agent"]

[tool.ruff.format]

indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"backend/migrations/env.py" = ["F401"]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "-v --durations=10"

[tool.deptry]
extend_exclude = ["tests"]

[tool.pyright]
typeCheckingMode = "standard" # strict가 아닌 standard로 타협
reportMissingTypeStubs = "none" # 서드파티 라이브러리에 타입 서적 없어도 통과
reportUnknownMemberType = "none" # 추론 안 되는 타입(Any)은 일단 눈감아주기
