[project]
name = "kdt-ai-2-hands-on-experience"
version = "0.1.0"
description = "AI Financial Copilot Sandbox monorepo"
requires-python = ">=3.11,<3.12"
dependencies = [
    "agent",
    "backend",
    "financial-service",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "agent",
    "backend",
    "mock-financial-service",
]

[tool.uv.sources]
agent = { workspace = true }
backend = { workspace = true }
financial-service = { workspace = true }

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "ipykernel>=7.3.0",
    "pre-commit>=4.0.0",
    "pyright>=1.1.411",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.8.0",
]

# deptry 관해선 아래 참조하세요. deptry . 명령어도 써보는 거 추천드립니다.
# https://deptry.com/rules-violations/#standard-library-dependencies-dep005

[tool.ruff]
src = [".", "backend", "agent"]
line-length = 88
target-version = "py311"


[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["backend", "agent"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"backend/migrations/env.py" = ["F401"]

[tool.pytest.ini_options]
python_files = "test_*.py"
addopts = "-v --durations=10"

[tool.deptry]
extend_exclude = ["tests"]
