[project]
name = "agent"
version = "0.1.0"
description = "LangGraph Agent runtime for the financial copilot"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.0",
    "langchain>=0.3.0",
    "langchain-google-vertexai>=3.2.4",
    "langchain-ollama>=1.0.0",
    "langchain-openai>=1.3.3",
    "langgraph>=0.2.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --durations=10"
