[project]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend Gateway for the financial copilot"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.0",
    "httpx>=0.28.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "redis>=5.2.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --durations=10"
filterwarnings = [
    "ignore::starlette.exceptions.StarletteDeprecationWarning"
]
