[project]
name = "mock-financial-service"
version = "0.1.0"
description = "Mock financial ledger API for the financial copilot (Fake Money)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --durations=10"
